--- a/mystyle.css
+++ b/mystyle.css
@@ -76,3 +76,14 @@ header{
 	text-decoration:none;
 	display:inline-block;
 }
+.toiletRoll, .leftCol{
+	margin-top:1%;
+}
+.toiletRollButton{
+position:relative;
+height:200px;
+width:200px;
+border:1px solid grey;
+float: left;
+margin:5px;
+}
